--- a/service/templates/index.html
+++ b/service/templates/index.html
@@ -13,6 +13,7 @@
     <div class="container">
         <div class="page-header">
             <h1>Customer Demo REST API Service</h1>
+            <h2>This is a test</h2>
         </div>
 
         <!-- Flash Message -->
